<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail">E_mail</string>
    <string name="password">Password</string>
    <string name="join">JOIN</string>
    <string name="log_in">Log in</string>
    <string name="guide_text_1">This is guide_1 for this application</string>
    <string name="guide_text_2">This is guide_2 for this application</string>

    <string name="instruction">Show Instruction</string>
    <string name="shoes_list">Shoes List</string>
    <string name="instruction_1">This is instruction 1 of Instruction Page</string>
    <string name="instruction_2">This is instruction 2 of Instruction Page</string>
    <string name="shoe_size_hint">Write shoe size.</string>
    <string name="shoe_company_hint">Write shoe company</string>
    <string name="shoe_description_hint">Write shoe description.</string>
    <string name="shoe_img_hint">Write img</string>
    <string name="shoe_name_hint">Write shoe name</string>
    <string name="shoe_detail_save_btn">Save</string>
    <string name="empty_string" />
</resources>
