<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="fragment"
            type="com.udacity.shoestore.screen.shoeList.ShoeDetailFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screen.shoeList.ShoeDetailFragment">

        <!-- TODO: Update blank fragment layout -->


        <EditText
            android:id="@+id/shoe_description_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:height="48dp"
            android:ems="10"
            android:hint="@string/shoe_description_hint"

            android:inputType="text"
            android:minHeight="48dp"
            android:text="@string/empty_string"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_company_edit_text" />

        <EditText
            android:id="@+id/shoe_img_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:height="48dp"
            android:ems="10"
            android:hint="@string/shoe_img_hint"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@string/empty_string"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_description_edit_text" />

        <EditText
            android:id="@+id/shoe_name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:height="48dp"
            android:ems="10"
            android:hint="@string/shoe_name_hint"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@string/empty_string"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/shoe_size_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/shoe_size_hint"
            android:inputType="number"
            android:minHeight="48dp"
            android:text="@string/empty_string"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_edit_text" />

        <EditText
            android:id="@+id/shoe_company_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:height="48dp"
            android:ems="10"
            android:hint="@string/shoe_company_hint"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@string/empty_string"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_edit_text" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/shoe_detail_save_btn"
            app:layout_constraintStart_toStartOf="@+id/shoe_img_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/shoe_img_edit_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>